--- a/nextjs_sandi/.env.local
+++ b/nextjs_sandi/.env.local
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_SERVER_DOMAIN='http://45.125.237.89:9000/'
+NEXT_PUBLIC_SERVER_DOMAIN='http://localhost:9000/'
 NEXT_PUBLIC_WEBSITE_DOMAIN='http://45.125.237.89:3000/'
 NEXT_PUBLIC_ADMIN_DOMAIN='http://admin.newsunsoftware.com/'
