--- a/sandi_stock_reactjs/.env
+++ b/sandi_stock_reactjs/.env
@@ -1,3 +1,3 @@
 NODE_ENV='test string',
-API_SERVER_DOMAIN='http://api.sandivietnam.com/',
+REACT_APP_API_URL='http://localhost:9000/'
 REACT_APP_TEST_STRING='test string'
