--- a/sandi_stock_reactjs/package.json
+++ b/sandi_stock_reactjs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "star-admin-pro-react",
   "version": "1.1.0",
-  "homepage": "http://localhost:3000/sandi",
+  "homepage": "http://localhost:3000",
   "private": true,
   "dependencies": {
     "@fullcalendar/core": "^4.3.1",
