--- a/sandi_stock_reactjs/package.json
+++ b/sandi_stock_reactjs/package.json
@@ -12,6 +12,7 @@
     "@lourenci/react-kanban": "^0.13.0",
     "@mdi/font": "^4.2.95",
     "@tinymce/tinymce-react": "^3.3.2",
+    "@trendmicro/react-modal": "^3.1.0",
     "bootstrap": "^4.3.1",
     "bosket": "^0.2.3",
     "brace": "^0.11.1",
@@ -28,7 +29,7 @@
     "i18next-browser-languagedetector": "^4.0.1",
     "namor": "^1.1.3",
     "nouislider-react": "^3.3.2",
-    "react": "^16.9.0",
+    "react": "^16.14.0",
     "react-ace": "^7.0.4",
     "react-beautiful-dnd": "^11.0.5",
     "react-bootstrap": "^1.0.0-beta.12",
@@ -36,6 +37,7 @@
     "react-bootstrap-table-next": "^3.2.0",
     "react-bootstrap-table2-paginator": "^2.1.0",
     "react-bootstrap-table2-toolkit": "^2.1.0",
+    "react-bootstrap-treeview": "^0.1.0",
     "react-bootstrap-typeahead": "^3.4.7",
     "react-c3js": "^0.1.20",
     "react-chartist": "^0.13.3",
@@ -44,6 +46,7 @@
     "react-clipboard.js": "^2.0.16",
     "react-collapse": "^5.0.0",
     "react-color": "^2.17.3",
+    "react-complex-tree": "^1.1.8",
     "react-contextmenu": "^2.11.0",
     "react-data-sort": "^1.2.1",
     "react-datepicker": "^2.9.6",
@@ -77,6 +80,7 @@
     "react-tag-autocomplete": "^5.11.1",
     "react-treebeard": "^3.2.4",
     "react-trello": "^2.2.3",
+    "reactjs-popup": "^2.0.5",
     "simple-line-icons": "^2.4.1",
     "slick-carousel": "^1.8.1",
     "sweetalert2-react": "^0.8.3",
