--- a/sandi_stock_api/package.json
+++ b/sandi_stock_api/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mkdirp": "^1.0.4",
     "mysql": "^2.18.1",
     "node-fetch": "^3.2.3",
