--- a/sandi_stock_reactjs/package.json
+++ b/sandi_stock_reactjs/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.1",
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
+    "hero-validate": "^1.1.8",
     "namor": "^1.1.3",
     "nouislider-react": "^3.3.2",
     "react": "^16.14.0",
@@ -71,7 +72,8 @@
     "simple-line-icons": "^2.4.1",
     "sweetalert2-react": "^0.8.3",
     "ti-icons": "^0.1.2",
-    "typicons.font": "^2.0.9"
+    "typicons.font": "^2.0.9",
+    "validator": "^13.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
