--- a/sandi_stock_reactjs/package.json
+++ b/sandi_stock_reactjs/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^2.8.0",
     "cogo-toast": "^4.1.1",
     "compass-mixins": "^0.12.10",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.1",
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
