--- a/sandi_stock_reactjs/.env
+++ b/sandi_stock_reactjs/.env
@@ -1,3 +1,3 @@
 NODE_ENV='test string',
-REACT_APP_API_URL='http://localhost:9000/'
+REACT_APP_API_URL='http://115.146.123.101:9001/'
 REACT_APP_TEST_STRING='test string'
