--- a/sandi_stock_reactjs/package.json
+++ b/sandi_stock_reactjs/package.json
@@ -10,7 +10,11 @@
     "@fullcalendar/react": "^4.3.0",
     "@fullcalendar/timegrid": "^4.3.0",
     "@lourenci/react-kanban": "^0.13.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@mdi/font": "^4.2.95",
+    "@react-spring/web": "^9.4.5",
     "@tinymce/tinymce-react": "^3.3.2",
     "@trendmicro/react-modal": "^3.1.0",
     "bootstrap": "^4.3.1",
@@ -60,12 +64,13 @@
     "react-quill": "^1.3.3",
     "react-rating": "^2.0.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
+    "react-scripts": "5.0.1",
     "react-select": "^3.2.0",
     "react-simple-maps": "^1.0.0-beta.0",
     "react-simplemde-editor": "^4.1.0",
     "react-slick": "^0.25.2",
     "react-sparklines": "^1.7.0",
+    "react-spring": "^9.4.5",
     "react-svg-gauge": "^1.0.10",
     "react-table": "^6.10.3",
     "react-tag-autocomplete": "^5.11.1",
