--- a/sandi_stock_reactjs/package.json
+++ b/sandi_stock_reactjs/package.json
@@ -50,6 +50,7 @@
     "react-complex-tree": "^1.1.8",
     "react-contextmenu": "^2.11.0",
     "react-data-sort": "^1.2.1",
+    "react-data-table-component": "^7.5.2",
     "react-datepicker": "^2.9.6",
     "react-dom": "^16.9.0",
     "react-dragula": "^1.1.17",
@@ -76,6 +77,7 @@
     "react-tag-autocomplete": "^5.11.1",
     "reactjs-popup": "^2.0.5",
     "simple-line-icons": "^2.4.1",
+    "styled-components": "^5.3.5",
     "sweetalert2-react": "^0.8.3",
     "ti-icons": "^0.1.2",
     "typicons.font": "^2.0.9",
